fix alignment

--- a/src/main.css
+++ b/src/main.css
@@ -1003,3 +1003,9 @@ input:checked+.slider:before {
     font-weight: 800;
     line-height: 40px;
 }
+
+@media (min-width: 992px) {
+    .col-md-10 {
+        width: 100%;
+    }
+}
